tests/org.eclipse.php.core.tests/workspace/errors/php7/yieldOnlyInFunction1.pdtt
--TEST--
Test unfinished try statement error reporting
--FILE--
<?php
yield $x;
?>
--EXPECT--
[line=2, start=6, end=14] syntax error, the yield expression can only be used inside a function